Fix wrapping of screenshot and stacktrace

--- a/report-template/css/style.css
+++ b/report-template/css/style.css
@@ -634,23 +634,18 @@ footer p {
 }
 
 .stacktrace {
-    /* These are technically the same, but use both */
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-    -ms-word-break: break-all;
-    /* This is the dangerous one in WebKit, as it breaks things wherever */
-    word-break: break-all;
-    /* Instead use this non-standard one: */
-    word-break: break-word;
-    /* Adds a hyphen where the word breaks, if supported (No Blink) */
-    -ms-hyphens: auto;
-    -moz-hyphens: auto;
-    -webkit-hyphens: auto;
-    hyphens: auto;
+    overflow: scroll;
+    max-width: 45rem;
 }
 
 .exception-container td.exception {
     width: 70%;
+}
+
+.exception-container td.screenshot-container {
+    width: 30%;
+    max-width: 15rem;
+    position: relative;
 }
 
 .exception-container img {
